--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -134,15 +134,15 @@
     </div>
     <div>
         
-        <ul>
+        <!-- <ul>
             @for (item of (this.noteService.items$ | async); track item) {
               <li>
                 {{ item['title'] }}
               </li>
             }
-          </ul>
-        <!-- @for (note of noteList; track note) {
+          </ul> -->
+        @for (note of getList(); track note) {
             <app-note [note]="note"></app-note>
-          } -->
+          }
     </div>
 </div>
